--- a/contact.html
+++ b/contact.html
@@ -1,34 +1,40 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mighty Ducks Hockey League</title>
+    <!--<link rel="stylesheet" href="./styles/main.css">-->
+   <!--<link rel="stylesheet" href="./styles/main2.css">-->
+   <link rel="stylesheet" href="./styles/dariomr.css">
 </head>
+
 <body>
-    <Header>
-        <H1>Mighty Ducks Hockey League</H1>
-<nav>
-    <div>
-        <a href="index.html">Home</a>
-        <a href="about.html">About MDHL</a>
-        <a href="#">contact</a>
-</div>
-    </nav>
-         </Header>
-
-<main>
-    <aside>
-    <img src="/asset/LogoMightyducks-01.png" alt="Logo MDHL">
-    <img src="/asset/hockey3.jpg" alt="Foto Hockey 3">
-</aside>
-
-
-<p> Please email us at mdhl@chihockey.org
-We reply to your email as soon as we can.</p>
-
-
-</main>
+    <header>
+        <img src="./assets/img/LogoMightyducks-01.png" alt="logo" class="logo">
+        <h1>Mighty Ducks Hockey League</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About MDHL</a>
+            <a href="#" class="active">Contact</a>
+        </nav>
+        <img src="./assets/img/hockey1.jpg" alt="jugadores de hockey" class="img">
+    </header>
+    <main>
+        <section>
+            <h2>Contact</h2>
+            <div class="container">
+                <article>
+                    <h3>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></h3>
+                    <h3>We reply to your email as soon as we can.</h3>
+                </article>
+            </div>
+        </section>
+    </main>
+    <aside></aside>
+    <footer></footer>
 </body>
+
 </html>
