--- a/index.html
+++ b/index.html
@@ -1,41 +1,46 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mighty Ducks Hockey League</title>
+    <!--<link rel="stylesheet" href="./styles/main.css">-->
+   <!--<link rel="stylesheet" href="./styles/main2.css">-->
+    <link rel="stylesheet" href="./styles/dariomr.css">
 </head>
 
 <body>
-
-    <Header>
-        <H1>Mighty Ducks Hockey League</H1>
-<nav>
-    <div>
-        <a href="#">Home</a>
-        <a href="about.html">About MDHL</a>
-        <a href="contact.html">contact</a>
-</div>
-    </nav>
-        </Header>
-<main>
-<aside>
-    <img src="/asset/LogoMightyducks-01.png" alt="Logo MDHL">
-    <img src="/asset/hockey1.jpg" alt="Foto Hockey">
-</aside>
-
-<h1> Events </h1> 
-
-<section>
-    <h2> August 4 </h2> 
-       <p> MDSL Fundraiser </p>
-            <h2> August 16 </h2> 
-                <p>Season Kick-off: Meet the Teams </p>
-                    <h2> September 1  </h2>
-                        <p>First Game of the Season (Check Game Schedule for details) </p>
-
-</section>
-</main>
+    <header>
+        <h1 class="titulo">Mighty Ducks Hockey League</h1>
+        <img src="./assets/img/LogoMightyducks-01.png" alt="logo" class="logo">
+        <img src="./assets/img/design1_image1.jpg" alt="jugadores de hockey" class="img">
+        <nav>
+            <a href="#" class="active">Home</a>
+            <a href="about.html">About MDHL</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
+    <main>
+        <section class="section">
+            <h2>Upcoming Events</h2>
+            <div class="container">
+            <article>
+                <h3>August 4</h3>
+                <p>MDSL Fundraiser</p>
+            </article>
+            <article>
+                <h3>August 16</h3>
+                <p>Season Kick-off: Meet the Teams</p>
+            </article>
+            <article>
+                <h3>September 1</h3>
+                <p>First Game of the Season(Check Game Schedule for details)</p>
+            </article></div>
+        </section>
+    </main>
+    <aside>
+    </aside>
+    <footer></footer>
 </body>
 </html>
