--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
         <h1>Mighty Ducks Hockey League</h1>
         <nav>
             <a href="index.html">Home</a>
-            <a href="#" class="active">About MDHL</a>
+            <a href="#" class="active">About</a>
             <a href="contact.html">Contact</a>
         </nav>
         <img src="./assets/img/design1_image2.jpg" alt="jugadores de hockey2" class="img">
