--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
         <h1>Mighty Ducks Hockey League</h1>
         <nav>
             <a href="index.html">Home</a>
-            <a href="about.html">About MDHL</a>
+            <a href="about.html">About</a>
             <a href="#" class="active">Contact</a>
         </nav>
         <img src="./assets/img/hockey1.jpg" alt="jugadores de hockey" class="img">
