--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <img src="./assets/img/design1_image1.jpg" alt="jugadores de hockey" class="img">
         <nav>
             <a href="#" class="active">Home</a>
-            <a href="about.html"> About</a>
+            <a href="about.html"> About MDHL</a>
             <a href="contact.html">Contact</a>
         </nav>
     </header>
