--- a/about.html
+++ b/about.html
@@ -5,46 +5,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mighty Ducks Hockey League</title>
-     <!--<link rel="stylesheet" href="./styles/main.css">-->
-    <!--<link rel="stylesheet" href="./styles/main2.css">-->
-    <link rel="stylesheet" href="./styles/dariomr.css">
-   </head>
+    <link rel="stylesheet" href="./styles/main_task03.css">
+    <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
+    <title>About MDHL</title>
+</head>
 
 <body>
     <header>
-        <img src="./assets/img/LogoMightyducks-01.png" alt="logo" class="logo">
-        <h1>Mighty Ducks Hockey League</h1>
+        <div class="header2">
+        <h1>MIGHTY DUCKS HOCKEY LEAGUE</h1>
         <nav>
             <a href="index.html">Home</a>
-            <a href="#" class="active">About</a>
+            <a href="#" class="active">About MDHL</a>
             <a href="contact.html">Contact</a>
+            <a href="gameinfo.html">Game Info</a>
+            <a href="rules.html">Rules</a>
         </nav>
-        <img src="./assets/img/design1_image2.jpg" alt="jugadores de hockey2" class="img">
-    </header>
+    </div>
+</header>
     <main>
         <section>
             <h2>About</h2>
             <div class="container">
+                <img src="./img/LogoMightyducks-01.png" alt="logo" class="logo">
+                <div>
             <article>
                 <h2>Mision</h2>
-                <p> &nbsp; &nbsp; &nbsp; To support young athletes living Chicago's northside neighborhood, who have an interest in
+                <p>To support young athletes living Chicago's northside neighborhood, who have an interest in
                     learning and playing soccer, with opportunities to learn and practice skills related to the game of
                     hockey, specifically those skills around team cooperation and good sportsmanship</p>
             </article>
             <article>
                 <h2>Vision</h2>
-                <p> &nbsp; &nbsp; &nbsp; The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes
+                <p>The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes
                     through the building of character, self-discipline, and leadership</p>
             </article>
             <article>
                 <h2>General Information</h2>
-                <p> &nbsp; &nbsp; &nbsp; The Mighty Ducks Soccer League was established in 1996 to provide athletes residing
+                <p>The Mighty Ducks Soccer League was established in 1996 to provide athletes residing
                     Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a
                     member of MDHL, you must be between the ages of 4-12 and reside a Chicago northside
                     neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of
                     parents and previous league member</p>
-            </article>
+            </article></div>
         </div>
         </section>
     </main>
