--- a/contact.html
+++ b/contact.html
@@ -5,27 +5,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mighty Ducks Hockey League</title>
-    <!--<link rel="stylesheet" href="./styles/main.css">-->
-   <!--<link rel="stylesheet" href="./styles/main2.css">-->
-   <link rel="stylesheet" href="./styles/dariomr.css">
+    <link rel="stylesheet" href="./styles/main_task03.css">
+    <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
+    <title>contact</title>
 </head>
 
 <body>
     <header>
-        <img src="./assets/img/LogoMightyducks-01.png" alt="logo" class="logo">
-        <h1>Mighty Ducks Hockey League</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="#" class="active">Contact</a>
-        </nav>
-        <img src="./assets/img/hockey1.jpg" alt="jugadores de hockey" class="img">
+        <div class="header3">
+            <h1>MIGHTY DUCKS HOCKEY LEAGUE</h1>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="about.html">About MDHL</a>
+                <a href="#" class="active">Contact</a>
+                <a href="gameinfo.html">Game Info</a>
+                <a href="rules.html">Rules</a>
+            </nav>
+        </div>
     </header>
     <main>
         <section>
             <h2>Contact</h2>
             <div class="container">
+                <img src="./img/LogoMightyducks-01.png" alt="logo" class="logo">
                 <article>
                     <h3>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></h3>
                     <h3>We reply to your email as soon as we can.</h3>
