--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
         <section>
             <h2>Contact</h2>
             <div class="container">
-                <img src="./img/LogoMightyducks-01.png" alt="logo" class="logo">
+                <img src="./assets/img/LogoMightyducks-01.png" alt="logo" class="logo">
                 <article>
                     <h3>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></h3>
                     <h3>We reply to your email as soon as we can.</h3>
