--- a/rules.html
+++ b/rules.html
@@ -30,7 +30,7 @@
                 <div id="mdhl-modif">IHF rules shall govern MDHL play except as modified herein</div>
             </div>
             <div class="container">
-                <img src="./img/LogoMightyducks-01.png" alt="logo" class="logo">
+                <img src="./assets/img/LogoMightyducks-01.png" alt="logo" class="logo">
                 <div class="art-container">
                     <article>
                         <h3>SPORTSMANSHIP</h3>
