--- a/gameinfo.html
+++ b/gameinfo.html
@@ -27,14 +27,16 @@
             <h2>Info</h2>
         </div>
             <div class="container">
-                <img src="./img/LogoMightyducks-01.png" alt="logo" class="logo">
+                <img src="./assets/img/LogoMightyducks-01.png" alt="logo" class="logo">
                 <div class="art-container">
                     <article>
-                      <div>
-                        <h3>fall schedule</h3>
+                      <div><thead>
+                        <h3>Fall schedule</h3>
                         <h3>All games take place on saturday</h3>
+                    </thead>
                         <table>
-                            <tr>
+                            <tbody>
+                               <tr>
                                 <th>SEPTEMBER</th>
                                 <th >Teams</th>
                                 <th>Location</th>
@@ -90,7 +92,9 @@
                                 <td>Greenbay</td>
                                 <td>9:30 a.m.</td>
                             </tr>
+                        </tbody>
                         </table>
+                        <tfoot>
                         <br><br><br>
                             <p><strong>Facility Type:</strong> Outdoor</p>
                             <br>
@@ -98,10 +102,11 @@
                             <br><br>
                             <p><strong>Please direct all questions to :</strong> Michael Randall, League Coordinator</p>
                             <br>
-                            <div id="contacto">
+                            <div id="Contacto">
                             <p><strong>Phone:</strong> (630) 690-8132</p>
-                            <p><strong>Email:</strong><a href="mailto:michael.randall@chihockey.org">michael.randall@chihockey.org</a></p>
+                            <p><strong>Email: </strong><a href="mailto: michael.randall@chihockey.org">michael.randall@chihockey.org</a></p>
                             </div>
+                        </tfoot>
                       </div>
                     </article>
                 </div>
