--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
         <section>
             <h2>Upcoming Events</h2>
             <div class="container">
-                <img src="./img/LogoMightyducks-01.png" alt="logo" class="logo">
+                <img src="./assets/img/LogoMightyducks-01.png" alt="logo" class="logo">
                 <div class="art-container">
                     <article>
                         <h3>August 4</h3>
-                        <p>MDSL Fundraiser</p>
+                        <p>&nbsp;&nbsp;MDSL Fundraiser</p>
                     </article>
                     <article>
                         <h3>August 16</h3>
-                        <p>Season Kick-off: Meet the Teams</p>
+                        <p>&nbsp;&nbsp;Season Kick-off: Meet the Teams</p>
                     </article>
                     <article>
                         <h3>September 1</h3>
-                        <p>First Game of the Season(Check Game Schedule for details)</p>
+                        <p>&nbsp;&nbsp;First Game of the Season(Check Game Schedule for details)</p>
                     </article>
                 </div>
             </div>
