--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-    <link rel="stylesheet" href="./styles/main_task03.css">
-    <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="stylesheet" href="./styles/main_task04.css">
+    <link rel="icon" href="./assets/img/favicon.ico" type="image/x-icon">
     <title>Home MDHL</title>
 </head>
 
 <body>
     <header>
-        <div class="header1">
+        <div class="header">
             <h1>MIGHTY DUCKS HOCKEY LEAGUE</h1>
             <nav>
                 <a href="#" class="active">Home</a>
@@ -20,6 +20,7 @@
                 <a href="contact.html">Contact</a>
                 <a href="gameinfo.html">Game Info</a>
                 <a href="rules.html">Rules</a>
+                <a href="form.html">Form</a>
             </nav>
         </div>
     </header>
@@ -46,7 +47,11 @@
         </section>
     </main>
     <aside></aside>
-    <footer></footer>
+    <footer>
+        <div>
+            <p> Mighty Ducks Hockey League 2022 &copy; | Rosiansky Dario </p>
+        </div>
+    </footer>
 </body>
 
 </html>
