--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/main_task03.css">
-    <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./styles/main_task04.css">
+    <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
     <title>About MDHL</title>
 </head>
 
@@ -20,6 +20,7 @@
             <a href="contact.html">Contact</a>
             <a href="gameinfo.html">Game Info</a>
             <a href="rules.html">Rules</a>
+            <a href="form.html">Form</a>
         </nav>
     </div>
 </header>
@@ -52,7 +53,11 @@
         </section>
     </main>
     <aside></aside>
-    <footer></footer>
+    <footer>
+        <div>
+            <p> Mighty Ducks Hockey League 2022 &copy; | Rosiansky Dario </p>
+        </div>
+    </footer>
 </body>
 
 </html>
