--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/main_task03.css">
+    <link rel="stylesheet" href="./styles/main_task04.css">
     <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
-    <title>contact</title>
+    <title>Contact MDHL</title>
 </head>
 
 <body>
@@ -20,6 +20,7 @@
                 <a href="#" class="active">Contact</a>
                 <a href="gameinfo.html">Game Info</a>
                 <a href="rules.html">Rules</a>
+                <a href="form.html">Form</a>
             </nav>
         </div>
     </header>
@@ -36,7 +37,11 @@
         </section>
     </main>
     <aside></aside>
-    <footer></footer>
+    <footer>
+        <div>
+            <p> Mighty Ducks Hockey League 2022 &copy; | Rosiansky Dario </p>
+        </div>
+    </footer>
 </body>
 
 </html>
