--- a/rules.html
+++ b/rules.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rules</title>
-    <link rel="stylesheet" href="./styles/main_task03.css">
+    <title>Rules MDHL</title>
+    <link rel="stylesheet" href="./styles/main_task04.css">
     <link rel="icon" href="./assets/img/favicon.ico" type="image/x-icon">
 </head>
 
@@ -20,6 +20,7 @@
                 <a href="contact.html">Contact</a>
                 <a href="gameinfo.html">Game Info</a>
                 <a href="#" class="active">Rules</a>
+                <a href="form.html">Form</a>
             </nav>
         </div>
     </header>
@@ -78,4 +79,9 @@
         </section>
     </main>
 </body>
+<footer>
+    <div>
+        <p> Mighty Ducks Hockey League 2022 &copy; | Rosiansky Dario </p>
+    </div>
+</footer>
 </html>
